--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ button.selected {
   <body>
     <div id="map"></div>
     <div class="logos">
-      <a href="http://www.mol.org"><img class="logo" src="/img/mol_logo.png"></a>
-      <img class="logo" src="/img/gmba_logo.jpg">
+      <a href="http://www.mol.org"><img class="logo" src="img/mol_logo.png"></a>
+      <img class="logo" src="img/gmba_logo.jpg">
     </div>
     <div id="layer_selector" class="cartodb_infobox">
       <button
