Another path fix.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>GMBA Mountain Portal</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <link rel="shortcut icon" href="/img/favicon.png" />
+    <link rel="shortcut icon" href="img/favicon.png" />
 
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
