--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ button.selected {
     <div id="map"></div>
     <div class="logos">
       <a href="http://www.mol.org"><img class="logo" src="img/mol_logo.png"></a>
-      <a href="http://www.gmba.unibas.ch/"><img class="logo" src="img/gmba_logo.jpg"></a>
+      <a href="http://www.gmba.unibas.ch/"><img class="logo" src="img/gmba_logo.png"></a>
     </div>
     <div id="layer_selector" class="cartodb_infobox">
       <button
